todo-exercises/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      securityContext:
        runAsUser: 0 # set to use root permissions to be able to write files
      volumes:
      - name: random-image
        persistentVolumeClaim:
          claimName: random-image-pvclaim
      containers:
      - name: todo-app
        image: juhanikat/todo-app:aj
        volumeMounts:
        - name: random-image
          mountPath: /usr/src/app/files
